Fix spacing for IT

--- a/app/stylesheet.css
+++ b/app/stylesheet.css
@@ -177,7 +177,7 @@ label {
 }
 
 #body3IT {
-	height: 90%;
+	height: 100%;
 	width: 50%;
 	margin-left: auto;
 	margin-right: auto;
